--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Photo Gallery
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let getfoto of fotoService.dataFoto; index as position">
+        <ion-img [src]="getfoto.webviewPath"></ion-img>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-fab-button (click)="foto()">
+      <ion-icon name="camera-sharp"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
