--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,18 +2,22 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <!-- <ion-icon name="triangle"></ion-icon> -->
+      
+      <ion-icon name="image-outline"></ion-icon>
+      <ion-label>Photo</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <!-- <ion-icon name="ellipse"></ion-icon> -->
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>About me</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <!-- <ion-icon name="square"></ion-icon> -->
+      <ion-icon name="sparkles-outline"></ion-icon>
+      <ion-label>Reference</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
