--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,7 +11,7 @@
     <ion-tab-button tab="tab2">
       <!-- <ion-icon name="ellipse"></ion-icon> -->
       <ion-icon name="person-circle-outline"></ion-icon>
-      <ion-label>About me</ion-label>
+      <ion-label>About Us</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
