--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -19,6 +19,12 @@
       <ion-icon name="sparkles-outline"></ion-icon>
       <ion-label>Reference</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <!-- <ion-icon name="square"></ion-icon> -->
+      <ion-icon name="cloud-outline"></ion-icon>
+      <ion-label>Cloud Photo</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
